Conducted some updated meta analysis for draft edits & re-ran TOM statistics which appeared to be based on old data.

--- a/meta_analysis/network_meta.ipynb
+++ b/meta_analysis/network_meta.ipynb
@@ -3,21 +3,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "statistical-leadership",
-   "metadata": {},
+   "id": "present-luxury",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ---------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -84,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "christian-declaration",
+   "id": "premium-psychology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,18 +102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "reported-layout",
+   "execution_count": 43,
+   "id": "contained-dayton",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 1"
+    "dset_idx <- 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "structural-atlas",
+   "execution_count": 44,
+   "id": "psychological-testament",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,23 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "durable-renewal",
+   "execution_count": 45,
+   "id": "greater-folder",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "16.3867467107877"
+       "3.94275699716223"
       ],
       "text/latex": [
-       "16.3867467107877"
+       "3.94275699716223"
       ],
       "text/markdown": [
-       "16.3867467107877"
+       "3.94275699716223"
       ],
       "text/plain": [
-       "[1] 16.38675"
+       "[1] 3.942757"
       ]
      },
      "metadata": {},
@@ -148,29 +153,83 @@
        ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
        ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
        ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
-       "</style><dl class=dl-inline><dt>0%</dt><dd>1.56906363488154</dd><dt>25%</dt><dd>8.31333340949909</dd><dt>50%</dt><dd>12.7985561042827</dd><dt>75%</dt><dd>20.525808520527</dd><dt>100%</dt><dd>72.4299278680013</dd></dl>\n"
+       "</style><dl class=dl-inline><dt>0%</dt><dd>0.300076521109008</dd><dt>25%</dt><dd>1.70828697779875</dd><dt>50%</dt><dd>2.63409579946968</dd><dt>75%</dt><dd>4.49392256478618</dd><dt>100%</dt><dd>26.5164136187847</dd></dl>\n"
       ],
       "text/latex": [
        "\\begin{description*}\n",
-       "\\item[0\\textbackslash{}\\%] 1.56906363488154\n",
-       "\\item[25\\textbackslash{}\\%] 8.31333340949909\n",
-       "\\item[50\\textbackslash{}\\%] 12.7985561042827\n",
-       "\\item[75\\textbackslash{}\\%] 20.525808520527\n",
-       "\\item[100\\textbackslash{}\\%] 72.4299278680013\n",
+       "\\item[0\\textbackslash{}\\%] 0.300076521109008\n",
+       "\\item[25\\textbackslash{}\\%] 1.70828697779875\n",
+       "\\item[50\\textbackslash{}\\%] 2.63409579946968\n",
+       "\\item[75\\textbackslash{}\\%] 4.49392256478618\n",
+       "\\item[100\\textbackslash{}\\%] 26.5164136187847\n",
        "\\end{description*}\n"
       ],
       "text/markdown": [
        "0%\n",
-       ":   1.5690636348815425%\n",
-       ":   8.3133334094990950%\n",
-       ":   12.798556104282775%\n",
-       ":   20.525808520527100%\n",
-       ":   72.4299278680013\n",
+       ":   0.30007652110900825%\n",
+       ":   1.7082869777987550%\n",
+       ":   2.6340957994696875%\n",
+       ":   4.49392256478618100%\n",
+       ":   26.5164136187847\n",
        "\n"
       ],
       "text/plain": [
-       "       0%       25%       50%       75%      100% \n",
-       " 1.569064  8.313333 12.798556 20.525809 72.429928 "
+       "        0%        25%        50%        75%       100% \n",
+       " 0.3000765  1.7082870  2.6340958  4.4939226 26.5164136 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.00391534955031006"
+      ],
+      "text/latex": [
+       "0.00391534955031006"
+      ],
+      "text/markdown": [
+       "0.00391534955031006"
+      ],
+      "text/plain": [
+       "[1] 0.00391535"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".dl-inline {width: auto; margin:0; padding: 0}\n",
+       ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
+       ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
+       ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
+       "</style><dl class=dl-inline><dt>0%</dt><dd>0</dd><dt>25%</dt><dd>0.002</dd><dt>50%</dt><dd>0.003</dd><dt>75%</dt><dd>0.004</dd><dt>100%</dt><dd>0.026</dd></dl>\n"
+      ],
+      "text/latex": [
+       "\\begin{description*}\n",
+       "\\item[0\\textbackslash{}\\%] 0\n",
+       "\\item[25\\textbackslash{}\\%] 0.002\n",
+       "\\item[50\\textbackslash{}\\%] 0.003\n",
+       "\\item[75\\textbackslash{}\\%] 0.004\n",
+       "\\item[100\\textbackslash{}\\%] 0.026\n",
+       "\\end{description*}\n"
+      ],
+      "text/markdown": [
+       "0%\n",
+       ":   025%\n",
+       ":   0.00250%\n",
+       ":   0.00375%\n",
+       ":   0.004100%\n",
+       ":   0.026\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   0%   25%   50%   75%  100% \n",
+       "0.000 0.002 0.003 0.004 0.026 "
       ]
      },
      "metadata": {},
@@ -179,16 +238,29 @@
    ],
    "source": [
     "# Subtract 1 from diagonal of TOM (so we don't count self-TOM)\n",
-    "tom_summary_df <- tibble(geneID = colnames(data_expr), tom_conn = rowSums(tom - diag(1, nrow(tom), ncol(tom)))) %>%\n",
-    "    arrange(desc(tom_conn))\n",
-    "mean(tom_summary_df$tom_conn)\n",
-    "quantile(tom_summary_df$tom_conn)"
+    "tom_hm <- tom - diag(1, nrow(tom), nrow(tom))\n",
+    "tom_summary_df <- tibble(geneID = colnames(data_expr)) %>%\n",
+    "    mutate(tom_conn_sums = rowSums(tom_hm)) %>%\n",
+    "    mutate(tom_conn_means = rowMeans(tom_hm))\n",
+    "#     arrange(desc(tom_conn))\n",
+    "mean(tom_summary_df$tom_conn_sums)\n",
+    "quantile(tom_summary_df$tom_conn_sums)\n",
+    "mean(tom_summary_df$tom_conn_means)\n",
+    "quantile(tom_summary_df$tom_conn_means) %>% round(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "public-season",
+   "id": "suspected-transsexual",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "manual-experiment",
    "metadata": {},
    "outputs": [],
    "source": []
