Refined the KEGG analysis organization code.

--- a/enrichment_analysis/kegg_analysis_write_out.ipynb
+++ b/enrichment_analysis/kegg_analysis_write_out.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "virtual-investigation",
+   "id": "static-twist",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "controlling-diagram",
+   "id": "sixth-appearance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "frequent-arabic",
+   "id": "fifty-tours",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fatty-dialogue",
+   "id": "weekly-surface",
    "metadata": {},
    "outputs": [
     {
@@ -83,18 +83,18 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "directed-rhythm",
+   "id": "plastic-muslim",
    "metadata": {},
    "outputs": [],
    "source": [
-    "set <- \"figo\"\n",
+    "sets <- c(\"demg\", \"figo\", \"survival\")\n",
     "colors <- list(down = \"blue\", up = \"red\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "unknown-shopper",
+   "id": "brown-township",
    "metadata": {},
    "outputs": [
     {
@@ -125,44 +125,67 @@
       "  qval = \u001b[32mcol_double()\u001b[39m\n",
       ")\n",
       "\n",
+      "\n",
+      "\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "cols(\n",
+      "  type = \u001b[31mcol_character()\u001b[39m,\n",
+      "  geneIDs = \u001b[31mcol_character()\u001b[39m,\n",
+      "  count = \u001b[32mcol_double()\u001b[39m,\n",
+      "  ratio = \u001b[32mcol_double()\u001b[39m,\n",
+      "  qval = \u001b[32mcol_double()\u001b[39m\n",
+      ")\n",
+      "\n",
+      "\n",
+      "\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "cols(\n",
+      "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
+      "  baseMean = \u001b[32mcol_double()\u001b[39m,\n",
+      "  log2FoldChange = \u001b[32mcol_double()\u001b[39m,\n",
+      "  lfcSE = \u001b[32mcol_double()\u001b[39m,\n",
+      "  stat = \u001b[32mcol_double()\u001b[39m,\n",
+      "  pvalue = \u001b[32mcol_double()\u001b[39m,\n",
+      "  padj = \u001b[32mcol_double()\u001b[39m,\n",
+      "  qval = \u001b[32mcol_double()\u001b[39m\n",
+      ")\n",
+      "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "ea_df <- read_tsv(paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_\", set, \"_kegg\", \".tsv\"))\n",
-    "dge_res_df <- read_tsv(paste0(dirs$analysis_dir, \"/deg/\", unified_dsets[dset_idx], \"_DESeq_results.tsv\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "homeless-stroke",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir.create(paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_\", set, \"_kegg\"), showWarnings = FALSE)\n",
-    "for (i in seq_len(nrow(ea_df))) {\n",
-    "    pw_name <- ea_df$type[i] %>% str_replace_all(\" |-\", \"_\") %>% tolower()\n",
-    "    color_map <- ea_df$geneIDs[i] %>%\n",
-    "        str_split(\"/\") %>%\n",
-    "        unlist() %>%\n",
-    "        as_tibble() %>%\n",
-    "        rename(entrez = value) %>%\n",
-    "        inner_join(gene2id_df, by = \"entrez\") %>%\n",
-    "        inner_join(dge_res_df, by = c(\"hugo_symbol\" = \"geneID\")) %>%\n",
-    "        mutate(color = ifelse(log2FoldChange > 0, colors$up, colors$down)) %>%\n",
-    "        select(entrez, color)\n",
-    "    if (save_res) {\n",
-    "        color_map %>% write_tsv(paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_\", set, \"_kegg/\", pw_name, \".tsv\"))\n",
+    "for (set in sets) {\n",
+    "    ea_file <- paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_\", set, \"_kegg\", \".tsv\")\n",
+    "    if (file.exists(ea_file)) {\n",
+    "        ea_df <- read_tsv(ea_file)\n",
+    "        dge_res_df <- read_tsv(paste0(dirs$analysis_dir, \"/deg/\", unified_dsets[dset_idx], \"_DESeq_results.tsv\"))\n",
+    "\n",
+    "        dir.create(paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_\", set, \"_kegg\"), showWarnings = FALSE)\n",
+    "        for (i in seq_len(nrow(ea_df))) {\n",
+    "            pw_name <- ea_df$type[i] %>% str_replace_all(\" |-\", \"_\") %>% tolower()\n",
+    "            color_map <- ea_df$geneIDs[i] %>%\n",
+    "                str_split(\"/\") %>%\n",
+    "                unlist() %>%\n",
+    "                as_tibble() %>%\n",
+    "                rename(entrez = value) %>%\n",
+    "                inner_join(gene2id_df, by = \"entrez\") %>%\n",
+    "                inner_join(dge_res_df, by = c(\"hugo_symbol\" = \"geneID\")) %>%\n",
+    "                mutate(color = ifelse(log2FoldChange > 0, colors$up, colors$down)) %>%\n",
+    "                select(entrez, color)\n",
+    "            if (save_res) {\n",
+    "                color_map %>% write_tsv(paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_\", set, \"_kegg/\", pw_name, \".tsv\"))\n",
+    "            }\n",
+    "        }\n",
+    "\n",
     "    }\n",
-    "}\n"
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "impressed-spouse",
+   "id": "sexual-bicycle",
    "metadata": {},
    "outputs": [],
    "source": []
