Refined the KEGG analysis organization code again, no column headers included now.

--- a/enrichment_analysis/kegg_analysis_write_out.ipynb
+++ b/enrichment_analysis/kegg_analysis_write_out.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "static-twist",
+   "id": "honest-nowhere",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "sixth-appearance",
+   "id": "reflected-sullivan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fifty-tours",
+   "id": "objective-florida",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "weekly-surface",
+   "id": "practical-farming",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "plastic-muslim",
+   "id": "indirect-split",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "brown-township",
+   "id": "third-tongue",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
     "                mutate(color = ifelse(log2FoldChange > 0, colors$up, colors$down)) %>%\n",
     "                select(entrez, color)\n",
     "            if (save_res) {\n",
-    "                color_map %>% write_tsv(paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_\", set, \"_kegg/\", pw_name, \".tsv\"))\n",
+    "                color_map %>% write_tsv(paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_\", set, \"_kegg/\", pw_name, \".tsv\"), col_names = FALSE)\n",
     "            }\n",
     "        }\n",
     "\n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sexual-bicycle",
+   "id": "amazing-demand",
    "metadata": {},
    "outputs": [],
    "source": []
