Refined the KEGG analysis organization code again, now checks significance (qvalue) threshold before writing out.

--- a/enrichment_analysis/kegg_analysis_write_out.ipynb
+++ b/enrichment_analysis/kegg_analysis_write_out.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "honest-nowhere",
+   "id": "blank-coalition",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "reflected-sullivan",
+   "id": "worth-friday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "objective-florida",
+   "id": "military-truck",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "practical-farming",
+   "id": "artificial-albert",
    "metadata": {},
    "outputs": [
     {
@@ -83,18 +83,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "indirect-split",
+   "id": "copyrighted-fancy",
    "metadata": {},
    "outputs": [],
    "source": [
     "sets <- c(\"demg\", \"figo\", \"survival\")\n",
-    "colors <- list(down = \"blue\", up = \"red\")"
+    "colors <- list(down = \"blue\", up = \"red\")\n",
+    "q_thresh <- 0.05"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "third-tongue",
+   "id": "yellow-trader",
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +165,7 @@
     "        dir.create(paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_\", set, \"_kegg\"), showWarnings = FALSE)\n",
     "        for (i in seq_len(nrow(ea_df))) {\n",
     "            pw_name <- ea_df$type[i] %>% str_replace_all(\" |-\", \"_\") %>% tolower()\n",
+    "            qval <- ea_df$qval[i]\n",
     "            color_map <- ea_df$geneIDs[i] %>%\n",
     "                str_split(\"/\") %>%\n",
     "                unlist() %>%\n",
@@ -173,7 +175,7 @@
     "                inner_join(dge_res_df, by = c(\"hugo_symbol\" = \"geneID\")) %>%\n",
     "                mutate(color = ifelse(log2FoldChange > 0, colors$up, colors$down)) %>%\n",
     "                select(entrez, color)\n",
-    "            if (save_res) {\n",
+    "            if (qval < q_thresh & save_res) {\n",
     "                color_map %>% write_tsv(paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_\", set, \"_kegg/\", pw_name, \".tsv\"), col_names = FALSE)\n",
     "            }\n",
     "        }\n",
@@ -185,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amazing-demand",
+   "id": "married-orchestra",
    "metadata": {},
    "outputs": [],
    "source": []
