Looking over FIGO significance KEGG pathways.

--- a/enrichment_analysis/kegg_analysis_write_out.ipynb
+++ b/enrichment_analysis/kegg_analysis_write_out.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "blank-coalition",
+   "id": "polish-orientation",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "worth-friday",
+   "id": "sustainable-bulgaria",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "military-truck",
+   "id": "disturbed-relay",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "artificial-albert",
+   "id": "electrical-nitrogen",
    "metadata": {},
    "outputs": [
     {
@@ -83,19 +83,20 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "copyrighted-fancy",
+   "id": "widespread-smith",
    "metadata": {},
    "outputs": [],
    "source": [
     "sets <- c(\"demg\", \"figo\", \"survival\")\n",
-    "colors <- list(down = \"blue\", up = \"red\")\n",
+    "# blue = down, red = up\n",
+    "colors <- list(down = \"#A9CCE3\", up = \"#D98880\")\n",
     "q_thresh <- 0.05"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "yellow-trader",
+   "id": "hazardous-sailing",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "married-orchestra",
+   "id": "excellent-motor",
    "metadata": {},
    "outputs": [],
    "source": []
