Updated meta analysis and generated figures for grant proposal.

--- a/meta_analysis/kegg_result_meta.ipynb
+++ b/meta_analysis/kegg_result_meta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "canadian-discipline",
+   "id": "confidential-little",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "revolutionary-barrel",
+   "id": "independent-affiliation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,18 +45,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "touched-estonia",
+   "id": "broad-venezuela",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 2\n",
+    "dset_idx <- 1\n",
     "save_res <- TRUE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "reduced-position",
+   "id": "ambient-willow",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "tested-shell",
+   "id": "charitable-fundamental",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "appointed-glossary",
+   "id": "cutting-hammer",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -123,38 +123,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
-      "cols(\n",
-      "  X1 = \u001b[32mcol_double()\u001b[39m,\n",
-      "  X2 = \u001b[31mcol_character()\u001b[39m\n",
-      ")\n",
-      "\n",
-      "\n",
-      "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
-      "cols(\n",
-      "  X1 = \u001b[32mcol_double()\u001b[39m,\n",
-      "  X2 = \u001b[31mcol_character()\u001b[39m\n",
-      ")\n",
-      "\n",
-      "\n",
-      "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
-      "cols(\n",
-      "  X1 = \u001b[32mcol_double()\u001b[39m,\n",
-      "  X2 = \u001b[31mcol_character()\u001b[39m\n",
-      ")\n",
-      "\n",
-      "\n",
-      "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
-      "cols(\n",
-      "  X1 = \u001b[32mcol_double()\u001b[39m,\n",
-      "  X2 = \u001b[31mcol_character()\u001b[39m\n",
-      ")\n",
-      "\n",
-      "\n",
       "\n",
       "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
@@ -325,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "modified-personal",
+   "id": "sorted-transformation",
    "metadata": {},
    "source": [
     "# Look at breakdowns"
@@ -333,81 +301,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "proof-replication",
+   "execution_count": 7,
+   "id": "invalid-society",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 10 × 4</caption>\n",
+       "<caption>A tibble: 8 × 4</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>geneID</th><th scope=col>entrez</th><th scope=col>pathway</th><th scope=col>de_dir</th></tr>\n",
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>FGF10</td><td>2255</td><td>mapk_signaling_pathway</td><td>DOWN</td></tr>\n",
-       "\t<tr><td>FGF16</td><td>8823</td><td>mapk_signaling_pathway</td><td>DOWN</td></tr>\n",
-       "\t<tr><td>FGF7 </td><td>2252</td><td>mapk_signaling_pathway</td><td>DOWN</td></tr>\n",
-       "\t<tr><td>KITLG</td><td>4254</td><td>mapk_signaling_pathway</td><td>DOWN</td></tr>\n",
-       "\t<tr><td>FGF19</td><td>9965</td><td>mapk_signaling_pathway</td><td>UP  </td></tr>\n",
-       "\t<tr><td>FGF5 </td><td>2250</td><td>mapk_signaling_pathway</td><td>UP  </td></tr>\n",
-       "\t<tr><td>FGF8 </td><td>2253</td><td>mapk_signaling_pathway</td><td>UP  </td></tr>\n",
-       "\t<tr><td>IL1A </td><td>3552</td><td>mapk_signaling_pathway</td><td>UP  </td></tr>\n",
-       "\t<tr><td>PGF  </td><td>5228</td><td>mapk_signaling_pathway</td><td>UP  </td></tr>\n",
-       "\t<tr><td>TGFB2</td><td>7042</td><td>mapk_signaling_pathway</td><td>UP  </td></tr>\n",
+       "\t<tr><td>COL14A1</td><td>7373  </td><td>protein_digestion_and_absorption</td><td>DOWN</td></tr>\n",
+       "\t<tr><td>COL20A1</td><td>57642 </td><td>protein_digestion_and_absorption</td><td>DOWN</td></tr>\n",
+       "\t<tr><td>COL24A1</td><td>255631</td><td>protein_digestion_and_absorption</td><td>DOWN</td></tr>\n",
+       "\t<tr><td>COL25A1</td><td>84570 </td><td>protein_digestion_and_absorption</td><td>DOWN</td></tr>\n",
+       "\t<tr><td>COL28A1</td><td>340267</td><td>protein_digestion_and_absorption</td><td>DOWN</td></tr>\n",
+       "\t<tr><td>PRSS1  </td><td>5644  </td><td>protein_digestion_and_absorption</td><td>DOWN</td></tr>\n",
+       "\t<tr><td>COL6A5 </td><td>256076</td><td>protein_digestion_and_absorption</td><td>UP  </td></tr>\n",
+       "\t<tr><td>COL9A2 </td><td>1298  </td><td>protein_digestion_and_absorption</td><td>UP  </td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 10 × 4\n",
+       "A tibble: 8 × 4\n",
        "\\begin{tabular}{llll}\n",
        " geneID & entrez & pathway & de\\_dir\\\\\n",
        " <chr> & <chr> & <chr> & <chr>\\\\\n",
        "\\hline\n",
-       "\t FGF10 & 2255 & mapk\\_signaling\\_pathway & DOWN\\\\\n",
-       "\t FGF16 & 8823 & mapk\\_signaling\\_pathway & DOWN\\\\\n",
-       "\t FGF7  & 2252 & mapk\\_signaling\\_pathway & DOWN\\\\\n",
-       "\t KITLG & 4254 & mapk\\_signaling\\_pathway & DOWN\\\\\n",
-       "\t FGF19 & 9965 & mapk\\_signaling\\_pathway & UP  \\\\\n",
-       "\t FGF5  & 2250 & mapk\\_signaling\\_pathway & UP  \\\\\n",
-       "\t FGF8  & 2253 & mapk\\_signaling\\_pathway & UP  \\\\\n",
-       "\t IL1A  & 3552 & mapk\\_signaling\\_pathway & UP  \\\\\n",
-       "\t PGF   & 5228 & mapk\\_signaling\\_pathway & UP  \\\\\n",
-       "\t TGFB2 & 7042 & mapk\\_signaling\\_pathway & UP  \\\\\n",
+       "\t COL14A1 & 7373   & protein\\_digestion\\_and\\_absorption & DOWN\\\\\n",
+       "\t COL20A1 & 57642  & protein\\_digestion\\_and\\_absorption & DOWN\\\\\n",
+       "\t COL24A1 & 255631 & protein\\_digestion\\_and\\_absorption & DOWN\\\\\n",
+       "\t COL25A1 & 84570  & protein\\_digestion\\_and\\_absorption & DOWN\\\\\n",
+       "\t COL28A1 & 340267 & protein\\_digestion\\_and\\_absorption & DOWN\\\\\n",
+       "\t PRSS1   & 5644   & protein\\_digestion\\_and\\_absorption & DOWN\\\\\n",
+       "\t COL6A5  & 256076 & protein\\_digestion\\_and\\_absorption & UP  \\\\\n",
+       "\t COL9A2  & 1298   & protein\\_digestion\\_and\\_absorption & UP  \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 10 × 4\n",
+       "A tibble: 8 × 4\n",
        "\n",
        "| geneID &lt;chr&gt; | entrez &lt;chr&gt; | pathway &lt;chr&gt; | de_dir &lt;chr&gt; |\n",
        "|---|---|---|---|\n",
-       "| FGF10 | 2255 | mapk_signaling_pathway | DOWN |\n",
-       "| FGF16 | 8823 | mapk_signaling_pathway | DOWN |\n",
-       "| FGF7  | 2252 | mapk_signaling_pathway | DOWN |\n",
-       "| KITLG | 4254 | mapk_signaling_pathway | DOWN |\n",
-       "| FGF19 | 9965 | mapk_signaling_pathway | UP   |\n",
-       "| FGF5  | 2250 | mapk_signaling_pathway | UP   |\n",
-       "| FGF8  | 2253 | mapk_signaling_pathway | UP   |\n",
-       "| IL1A  | 3552 | mapk_signaling_pathway | UP   |\n",
-       "| PGF   | 5228 | mapk_signaling_pathway | UP   |\n",
-       "| TGFB2 | 7042 | mapk_signaling_pathway | UP   |\n",
+       "| COL14A1 | 7373   | protein_digestion_and_absorption | DOWN |\n",
+       "| COL20A1 | 57642  | protein_digestion_and_absorption | DOWN |\n",
+       "| COL24A1 | 255631 | protein_digestion_and_absorption | DOWN |\n",
+       "| COL25A1 | 84570  | protein_digestion_and_absorption | DOWN |\n",
+       "| COL28A1 | 340267 | protein_digestion_and_absorption | DOWN |\n",
+       "| PRSS1   | 5644   | protein_digestion_and_absorption | DOWN |\n",
+       "| COL6A5  | 256076 | protein_digestion_and_absorption | UP   |\n",
+       "| COL9A2  | 1298   | protein_digestion_and_absorption | UP   |\n",
        "\n"
       ],
       "text/plain": [
-       "   geneID entrez pathway                de_dir\n",
-       "1  FGF10  2255   mapk_signaling_pathway DOWN  \n",
-       "2  FGF16  8823   mapk_signaling_pathway DOWN  \n",
-       "3  FGF7   2252   mapk_signaling_pathway DOWN  \n",
-       "4  KITLG  4254   mapk_signaling_pathway DOWN  \n",
-       "5  FGF19  9965   mapk_signaling_pathway UP    \n",
-       "6  FGF5   2250   mapk_signaling_pathway UP    \n",
-       "7  FGF8   2253   mapk_signaling_pathway UP    \n",
-       "8  IL1A   3552   mapk_signaling_pathway UP    \n",
-       "9  PGF    5228   mapk_signaling_pathway UP    \n",
-       "10 TGFB2  7042   mapk_signaling_pathway UP    "
+       "  geneID  entrez pathway                          de_dir\n",
+       "1 COL14A1 7373   protein_digestion_and_absorption DOWN  \n",
+       "2 COL20A1 57642  protein_digestion_and_absorption DOWN  \n",
+       "3 COL24A1 255631 protein_digestion_and_absorption DOWN  \n",
+       "4 COL25A1 84570  protein_digestion_and_absorption DOWN  \n",
+       "5 COL28A1 340267 protein_digestion_and_absorption DOWN  \n",
+       "6 PRSS1   5644   protein_digestion_and_absorption DOWN  \n",
+       "7 COL6A5  256076 protein_digestion_and_absorption UP    \n",
+       "8 COL9A2  1298   protein_digestion_and_absorption UP    "
       ]
      },
      "metadata": {},
@@ -420,14 +380,14 @@
     "    inner_join(dge_res_df, by = \"geneID\") %>%\n",
     "    mutate(de_dir = ifelse(log2FoldChange > 0, \"UP\", \"DOWN\")) %>%\n",
     "    select(geneID, entrez, pathway, de_dir) %>%\n",
-    "    filter(pathway == \"mapk_signaling_pathway\") %>%\n",
+    "    filter(pathway == \"protein_digestion_and_absorption\") %>%\n",
     "    arrange(de_dir, geneID)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "racial-gospel",
+   "id": "earlier-partnership",
    "metadata": {},
    "outputs": [],
    "source": []
